--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- INIZIO HEADER -->
+    <header>
+        Boolando
+    </header>
+    <!-- INIZIO MAIN -->
+    <main>
+        <div class="bg-red py">
+            <div class="container">
+                <div class="row">
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                </div>
+                
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
