--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
         <div class="bg-red py">
             <div class="container">
                 <div class="row">
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
+                    <div class="col-100 text-center">
+                        <img src="img/1.webp" class="img-prodotto" alt="prodotto1">
+                    </div>
+                    <div class="col-100 text-center">
+                        <img src="img/2.webp" class="img-prodotto" alt="prodotto2">
+                    </div>
+                    <div class="col-100 text-center">
+                        <img src="img/3.webp" class="img-prodotto" alt="prodotto3">
+                    </div>
+                    <div class="col-100 text-center">
+                        <img src="img/4.webp" class="img-prodotto" alt="prodotto4">
+                    </div>
+                    <div class="col-100 text-center">
+                        <img src="img/5.webp" class="img-prodotto" alt="prodotto5">
+                    </div>
+                    <div class="col-100 text-center">
+                        <img src="img/6.webp" class="img-prodotto" alt="prodotto6">
+                    </div>
                 </div>
                 
             </div>
