[UPD] add layout footer

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             </div>
         </div>
     </main>
+
+    <!-- INIZIO FOOTER -->
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
