[UPD] add black-heart

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <div class="eco bg-green">
                             Sostenibilit&agrave;
                         </div>
+                        <div class="black-heart">
+                            &#9829;
+                        </div>
                     </div>
                     <!-- ITEM 2 -->
                     <div class="col-33">
@@ -38,6 +41,9 @@
                         <div class="discount-label bg-red">
                             -30%
                         </div>
+                        <div class="black-heart">
+                            &#9829;
+                        </div>
                     </div>
                     <!-- ITEM 3 -->
                     <div class="col-33">
@@ -48,6 +54,9 @@
                         <div class="prize inline-block line-through">184,99 &euro;</div>
                         <div class="discount-label bg-red">
                             -30%
+                        </div>
+                        <div class="black-heart">
+                            &#9829;
                         </div>
                     </div>
                     <!-- ITEM 4 -->
@@ -63,6 +72,9 @@
                         <div class="eco bg-green">
                             Sostenibilit&agrave;
                         </div>
+                        <div class="black-heart">
+                            &#9829;
+                        </div>
                     </div>
                     <!-- ITEM 5 -->
                     <div class="col-33">
@@ -70,6 +82,9 @@
                         <div class="brand">Maya Deluxe</div>
                         <h4 class="name-product">STRIPE BODICE</h4>
                         <div class="discount-prize inline-block color-red">99,99 &euro;</div>
+                        <div class="black-heart">
+                            &#9829;
+                        </div>
                         
                     </div>
                     <!-- ITEM 6 -->
@@ -80,6 +95,9 @@
                         <div class="discount-prize inline-block color-red">29,99 &euro;</div>
                         <div class="eco-left0 bg-green">
                             Sostenibilit&agrave;
+                        </div>
+                        <div class="black-heart">
+                            &#9829;
                         </div>
                         
                     </div>
