[UPD] add hover to black-heart

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <!-- ITEM 1 -->
                     <div class="col-33">
                         <img src="img/1.webp" class="img-prodotto" alt="prodotto1">
+                        <img src="img/1b.webp" class="img-hover" alt="prodotto1-2">
                         <div class="brand">Levi's</div>
                         <h4 class="name-product">RELAXED FIT TEE UNISEX</h4>
                         <div class="discount-prize inline-block color-red">14,99 &euro;</div>
