[UPD] add hover to images

--- a/index.html
+++ b/index.html
@@ -16,89 +16,106 @@
                 <div class="row">
                     <!-- ITEM 1 -->
                     <div class="col-33">
-                        <img src="img/1.webp" class="img-prodotto" alt="prodotto1">
-                        <img src="img/1b.webp" class="img-hover" alt="prodotto1-2">
-                        <div class="brand">Levi's</div>
-                        <h4 class="name-product">RELAXED FIT TEE UNISEX</h4>
-                        <div class="discount-prize inline-block color-red">14,99 &euro;</div>
-                        <div class="prize inline-block line-through">29,99 &euro;</div>
-                        <div class="discount-label bg-red">
-                            -50%
+                        <div class="content">
+                            <img src="img/1.webp" class="img-prodotto" alt="prodotto1">
+                            <img src="img/1b.webp" class="img-hover" alt="prodotto1-2">
+                            <div class="brand">Levi's</div>
+                            <h4 class="name-product">RELAXED FIT TEE UNISEX</h4>
+                            <div class="discount-prize inline-block color-red">14,99 &euro;</div>
+                            <div class="prize inline-block line-through">29,99 &euro;</div>
+                            <div class="discount-label bg-red">
+                                -50%
+                            </div>
+                            <div class="eco bg-green">
+                                Sostenibilit&agrave;
+                            </div>
+                            <div class="black-heart">
+                                &#9829;
+                            </div>
+                            </div>
                         </div>
-                        <div class="eco bg-green">
-                            Sostenibilit&agrave;
-                        </div>
-                        <div class="black-heart">
-                            &#9829;
-                        </div>
-                    </div>
                     <!-- ITEM 2 -->
                     <div class="col-33">
-                        <img src="img/2.webp" class="img-prodotto" alt="prodotto2">
-                        <div class="brand">Guess</div>
-                        <h4 class="name-product">ROSES TEE</h4>
-                        <div class="discount-prize inline-block color-red">20,99 &euro;</div>
-                        <div class="prize inline-block line-through">29,99 &euro;</div>
-                        <div class="discount-label bg-red">
-                            -30%
-                        </div>
-                        <div class="black-heart">
-                            &#9829;
+                        <div class="content">
+                            <img src="img/2.webp" class="img-prodotto" alt="prodotto2">
+                            <img src="img/2b.webp" class="img-hover" alt="prodotto2-2">
+                            <div class="brand">Guess</div>
+                            <h4 class="name-product">ROSES TEE</h4>
+                            <div class="discount-prize inline-block color-red">20,99 &euro;</div>
+                            <div class="prize inline-block line-through">29,99 &euro;</div>
+                            <div class="discount-label bg-red">
+                                -30%
+                            </div>
+                            <div class="black-heart">
+                                &#9829;
+                            </div>
                         </div>
                     </div>
                     <!-- ITEM 3 -->
                     <div class="col-33">
-                        <img src="img/3.webp" class="img-prodotto" alt="prodotto3">
-                        <div class="brand">Come Zucchero Filato</div>
-                        <h4 class="name-product">VOGLIA DI COLORI PASTELLO</h4>
-                        <div class="discount-prize inline-block color-red">129,99 &euro;</div>
-                        <div class="prize inline-block line-through">184,99 &euro;</div>
-                        <div class="discount-label bg-red">
-                            -30%
-                        </div>
-                        <div class="black-heart">
-                            &#9829;
+                        <div class="content">
+                            <img src="img/3.webp" class="img-prodotto" alt="prodotto3">
+                            <img src="img/3b.webp" class="img-hover" alt="prodotto3-2">
+                            <div class="brand">Come Zucchero Filato</div>
+                            <h4 class="name-product">VOGLIA DI COLORI PASTELLO</h4>
+                            <div class="discount-prize inline-block color-red">129,99 &euro;</div>
+                            <div class="prize inline-block line-through">184,99 &euro;</div>
+                            <div class="discount-label bg-red">
+                                -30%
+                            </div>
+                            <div class="black-heart">
+                                &#9829;
+                            </div>
                         </div>
                     </div>
                     <!-- ITEM 4 -->
                     <div class="col-33">
-                        <img src="img/4.webp" class="img-prodotto" alt="prodotto4">
-                        <div class="brand">Levi's</div>
-                        <h4 class="name-product">TEE UNISEX</h4>
-                        <div class="discount-prize inline-block color-red">14,99 &euro;</div>
-                        <div class="prize inline-block line-through">29,99 &euro;</div>
-                        <div class="discount-label bg-red">
-                            -50%
-                        </div>
-                        <div class="eco bg-green">
-                            Sostenibilit&agrave;
-                        </div>
-                        <div class="black-heart">
-                            &#9829;
+                        <div class="content">
+                            <img src="img/4.webp" class="img-prodotto" alt="prodotto4">
+                            <img src="img/4b.webp" class="img-hover" alt="prodotto4-2">
+                            <div class="brand">Levi's</div>
+                            <h4 class="name-product">TEE UNISEX</h4>
+                            <div class="discount-prize inline-block color-red">14,99 &euro;</div>
+                            <div class="prize inline-block line-through">29,99 &euro;</div>
+                            <div class="discount-label bg-red">
+                                -50%
+                            </div>
+                            <div class="eco bg-green">
+                                Sostenibilit&agrave;
+                            </div>
+                            <div class="black-heart">
+                                &#9829;
+                            </div>
                         </div>
                     </div>
                     <!-- ITEM 5 -->
                     <div class="col-33">
-                        <img src="img/5.webp" class="img-prodotto" alt="prodotto5">
-                        <div class="brand">Maya Deluxe</div>
-                        <h4 class="name-product">STRIPE BODICE</h4>
-                        <div class="discount-prize inline-block color-red">99,99 &euro;</div>
-                        <div class="black-heart">
-                            &#9829;
-                        </div>
+                        <div class="content">
+                            <img src="img/5.webp" class="img-prodotto" alt="prodotto5">
+                            <img src="img/5b.webp" class="img-hover" alt="prodotto5-2">
+                            <div class="brand">Maya Deluxe</div>
+                            <h4 class="name-product">STRIPE BODICE</h4>
+                            <div class="discount-prize inline-block color-red">99,99 &euro;</div>
+                            <div class="black-heart">
+                                &#9829;
+                            </div>
+                        </div>  
                         
                     </div>
                     <!-- ITEM 6 -->
                     <div class="col-33">
-                        <img src="img/6.webp" class="img-prodotto" alt="prodotto6">
-                        <div class="brand">Esprit</div>
-                        <h4 class="name-product">MAGLIONE-BLACK</h4>
-                        <div class="discount-prize inline-block color-red">29,99 &euro;</div>
-                        <div class="eco-left0 bg-green">
-                            Sostenibilit&agrave;
-                        </div>
-                        <div class="black-heart">
-                            &#9829;
+                        <div class="content">
+                            <img src="img/6.webp" class="img-prodotto" alt="prodotto6">
+                            <img src="img/6b.webp" class="img-hover" alt="prodotto6-2">
+                            <div class="brand">Esprit</div>
+                            <h4 class="name-product">MAGLIONE-BLACK</h4>
+                            <div class="discount-prize inline-block color-red">29,99 &euro;</div>
+                            <div class="eco-left0 bg-green">
+                                Sostenibilit&agrave;
+                            </div>
+                            <div class="black-heart">
+                                &#9829;
+                            </div>
                         </div>
                         
                     </div>
