[UPD] modifica su col-33

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
                             <div class="eco bg-green">
                                 Sostenibilit&agrave;
                             </div>
-                            <div class="black-heart">
-                                &#9829;
+                            <div class="heart">
+                                <div class="black-heart">
+                                    &#9829;
+                                </div>
+                                <div class="red-heart color-red">
+                                    &#9829;
+                                </div>
                             </div>
                             </div>
                         </div>
