[UPD] add style su header e correzione hover img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,46 @@
 <body>
     <!-- INIZIO HEADER -->
     <header>
-        Boolando
+        <div class="container">
+            <div class="row">
+                <div class="col25">
+                    <div class="header-content text-left">
+                        <ul class="unstyled-list margin-left">
+                            <li>
+                                <a href="">Donna</a>
+                            </li>
+                            <li>
+                                <a href="">Uomo</a>
+                            </li>
+                            <li>
+                                <a href="">Bambini</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col50">
+                    <div class="header-content">
+                        <img src="img/boolean-logo.png" class="img-logo" alt="logo">
+                    </div>
+                </div>
+                <div class="col25">
+                    <div class="header.content text-right">
+                        <ul class="unstyled-list margin-right">
+                            <li>
+                                <a href="">"profilo"</a>
+                            </li>
+                            <li>
+                                <a href="">"cuore"</a>
+                            </li>
+                            <li>
+                                <a href="">"carrello"</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </header>
     <!-- INIZIO MAIN -->
     <main>
