[UPD] add padding header

--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
 
     <!-- INIZIO FOOTER -->
     <footer>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-footer"></div>
+                <div class="col-footer"></div>
+            </div>
+        </div>
     </footer>
     
 </body>
